--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 						<ul class="js-clone-nav  text-center site-menu p-0 m-0">
 							<li><a href="single.html">奖励</a></li>
 							<li><a href="races.html">赛事</a></li>
-							<li><a href="https://www.bilibili.com/video/BV1NW4y1M7eZ/?spm_id_from=333.999.0.0">宣传片</a></li>
+							<li><a href="ads.url">宣传片</a></li>
 						</ul>
 					</div>
 					<div class="col-6 col-lg-3 text-lg-end">
